Implemented map bounds button

--- a/examples/full.html
+++ b/examples/full.html
@@ -27,7 +27,7 @@
 	<script src="../src/draw/handler/Draw.Marker.js"></script>
 	<script src="../src/draw/handler/Draw.Polygon.js"></script>
 	<script src="../src/draw/handler/Draw.Rectangle.js"></script>
-
+	<script src="../src/draw/handler/Draw.MapBounds.js"></script>
 
 	<script src="../src/edit/EditToolbar.js"></script>
 	<script src="../src/edit/handler/EditToolbar.Edit.js"></script>
