--- a/examples/basic.html
+++ b/examples/basic.html
@@ -23,6 +23,7 @@
 	<script src="../src/draw/handler/Draw.Rectangle.js"></script>
 	<script src="../src/draw/handler/Draw.Circle.js"></script>
 	<script src="../src/draw/handler/Draw.Marker.js"></script>
+	<script src="../src/draw/handler/Draw.MapBounds.js"></script>
 
 	<script src="../src/ext/LatLngUtil.js"></script>
 	<script src="../src/ext/GeometryUtil.js"></script>
